Bug 304282 - Aspect ratio on received video is not kept.
Summary: Aspect ratio on received video is not kept.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: call-ui (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-07-30 13:28 UTC by David Edmundson
Modified: 2012-08-20 14:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-07-30 13:28:30 UTC
When chatting with a contact I can resize the window so that the contacts video is really stretched.

We should either paint in black bars to maintain the aspect ratio, or simply lock the window size.
Comment 1 George Kiagiadakis 2012-07-30 13:38:20 UTC
This is easily fixable by setting the "force-aspect-ratio" property on xvimagesink.
Comment 2 Rohan Garg 2012-08-20 14:41:52 UTC
Git commit 4c6491cf993024fa6ba8a8aa51aeaceaf152142d by Rohan Garg.
Committed on 20/08/2012 at 16:40.
Pushed by garg into branch 'master'.

Keep aspect ratio on recieved video
Reviewed By : David Edmundson

M  +2    -0    src/call-window.cpp

http://commits.kde.org/telepathy-call-ui/4c6491cf993024fa6ba8a8aa51aeaceaf152142d