Keep aspect ratio on recieved video

BUG: 304282
Reviewed By : David Edmundson